реализовал удаленное управление через web api

--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <section name="remote" type="Any.Proxy.Configuration.RemoteSection, Any.Proxy, Version=1.0.0.0, Culture=neutral"/>
     <section name="proxy" type="Any.Proxy.Configuration.ProxySection, Any.Proxy, Version=1.0.0.0, Culture=neutral"/>
   </configSections>
+  <!--<remote password="1" prefixes="http://hashabc.com:50000/"/>-->
+  <remote password="1" prefixes="http://localhost:50000/"/>
   <proxy>
     <!--<portMap>
       <module name="test" fromHost="localhost" fromPort="52271" toHost="localhost" toPort="1923"/>
@@ -15,7 +18,7 @@
     </https>-->
     <!--<httpAgent>
       <module name="test" port="50000" >
-        <httpBridge url="http://lifemd5.com/"
+        <httpBridge url="http://hashabc.com/"
                     useProxy="false"
                     proxy="inet-proxy-b.sputnik.loadb.ubs.net:8085"
                     useDefaultCredentials="true"
@@ -36,24 +39,24 @@
     <!--<httpBridgeService>
       <module name="test" prefixes="http://hashabc.com/" />
     </httpBridgeService>-->
-    <redirect>
+    <!--<redirect>
       <module name="test" fromUrl="http://hashabc.com/" toUrl="http://habrahabr.ru/">
         <replaces>
-          <replace mediaType="text/html" oldValue="habrastorage.org" newValue="hashabc.com:50000"/>
+          <replace mediaType="text/html" oldValue="habrastorage.org" newValue="hashabc.com:50001"/>
           <replace mediaType="text/html" oldValue="http://habrahabr.ru" newValue="http://hashabc.com"/>
         </replaces>
       </module>
-      <module name="test2" fromUrl="http://hashabc.com:50000/" toUrl="http://habrastorage.org/" />
-    </redirect>
-    <!--<redirect>
-      <module name="test" fromUrl="http://localhost:50001/" toUrl="http://habrahabr.ru/">
+      <module name="test2" fromUrl="http://hashabc.com:50001/" toUrl="http://habrastorage.org/" />
+    </redirect>-->
+    <redirect>
+      <module name="test" fromUrl="http://localhost:50001/" toUrl="https://www.youtube.com/">
         <replaces>
-          <replace mediaType="text/html" oldValue="habrastorage.org" newValue="localhost:50000"/>
-          <replace mediaType="text/html" oldValue="http://habrahabr.ru" newValue="http://localhost:50001"/>
+          <replace mediaType="text/html" oldValue="habrastorage.org" newValue="localhost:50003"/>
+          <replace mediaType="text/html" oldValue="http://habrahabr.ru" newValue="http://localhost:50002"/>
         </replaces>
       </module>
-      <module name="test2" fromUrl="http://localhost:50000/" toUrl="http://habrastorage.org/" />
-    </redirect>-->
+      <module name="test2" fromUrl="http://localhost:50003/" toUrl="http://habrastorage.org/" />
+    </redirect>
   </proxy>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
