--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -26,16 +26,16 @@
                     password=""/>
       </module>
     </httpAgent>-->
-    <!--<httpsAgent>
-      <module name="test" port="50000" >
-        <httpBridge url="http://hashabc.com/"
+    <httpsAgent>
+      <module name="test" port="50001" >
+        <httpBridge url="http://hashabc.com:50003/"
                     useProxy="false"
                     proxy="inet-proxy-b.sputnik.loadb.ubs.net:8085"
                     useDefaultCredentials="true"
                     userName=""
                     password=""/>
       </module>
-    </httpsAgent>-->
+    </httpsAgent>
     <!--<httpBridgeService>
       <module name="test" prefixes="http://hashabc.com/" />
     </httpBridgeService>-->
@@ -48,7 +48,7 @@
       </module>
       <module name="test2" fromUrl="http://hashabc.com:50001/" toUrl="http://habrastorage.org/" />
     </redirect>-->
-    <redirect>
+    <!--<redirect>
       <module name="test" fromUrl="http://localhost:50001/" toUrl="https://www.youtube.com/">
         <replaces>
           <replace mediaType="text/html" oldValue="habrastorage.org" newValue="localhost:50003"/>
@@ -56,7 +56,7 @@
         </replaces>
       </module>
       <module name="test2" fromUrl="http://localhost:50003/" toUrl="http://habrastorage.org/" />
-    </redirect>
+    </redirect>-->
   </proxy>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
