--- a/Any.Proxy/Any.Proxy.csproj
+++ b/Any.Proxy/Any.Proxy.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0625DA7C-0E7E-4435-A1EE-6F1477ECD113}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{5370B5BB-21CC-4A0F-9CC7-A44F8BC40D10}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Any.Proxy</RootNamespace>
     <AssemblyName>Any.Proxy</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,86 +20,46 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Any.Logs">
       <HintPath>..\Components\AnyLog\Any.Logs.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Owin">
-      <HintPath>..\packages\Microsoft.Owin.2.0.2\lib\net45\Microsoft.Owin.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Owin.Host.HttpListener">
-      <HintPath>..\packages\Microsoft.Owin.Host.HttpListener.2.0.2\lib\net45\Microsoft.Owin.Host.HttpListener.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Owin.Hosting">
-      <HintPath>..\packages\Microsoft.Owin.Hosting.2.0.2\lib\net45\Microsoft.Owin.Hosting.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Owin">
-      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
-    </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
-    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Http.Owin">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Owin.5.2.3\lib\net45\System.Web.Http.Owin.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Topshelf">
-      <HintPath>..\Components\Topshelf-3.0.2\Topshelf.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\Controllers\ProxyController.cs" />
-    <Compile Include="Api\Startup.cs" />
-    <Compile Include="Configuration\RemoteSection.cs" />
-    <Compile Include="HttpsAgent\Configuration\HttpsAgentElement.cs" />
-    <Compile Include="HttpsAgent\Configuration\HttpsAgentElementCollection.cs" />
+    <Compile Include="Configuration\ProxyConfig.cs" />
+    <Compile Include="HttpAgent\Configuration\HttpAgentConfig.cs" />
+    <Compile Include="HttpAgent\HttpAgentModule.cs" />
+    <Compile Include="HttpBridge.cs" />
+    <Compile Include="Configuration\HttpBridgeConfig.cs" />
+    <Compile Include="HttpBridgeService\Configuration\HttpBridgeServiceConfig.cs" />
+    <Compile Include="HttpBridgeService\HttpBridgeServiceModule.cs" />
+    <Compile Include="HttpBridgeService\RemoteConnection.cs" />
+    <Compile Include="HttpsAgent\Configuration\HttpsAgentConfig.cs" />
     <Compile Include="HttpsAgent\HttpAgentModule.cs" />
-    <Compile Include="Https\Configuration\HttpsElement.cs" />
-    <Compile Include="Https\Configuration\HttpsElementCollection.cs" />
+    <Compile Include="Https\Configuration\HttpsConfig.cs" />
     <Compile Include="Https\HttpsConnection.cs" />
     <Compile Include="Https\HttpsModule.cs" />
     <Compile Include="Https\HttpsModuleBase.cs" />
-    <Compile Include="Loggers\LogStore.cs" />
-    <Compile Include="HttpAgent\Configuration\HttpAgentElement.cs" />
-    <Compile Include="HttpAgent\Configuration\HttpAgentElementCollection.cs" />
-    <Compile Include="Configuration\HttpBridgeElement.cs" />
-    <Compile Include="HttpBridge.cs" />
-    <Compile Include="HttpBridgeService\Configuration\HttpBridgeServiceElement.cs" />
-    <Compile Include="HttpBridgeService\Configuration\HttpBridgeServiceElementCollection.cs" />
-    <Compile Include="Http\Configuration\HttpElement.cs" />
-    <Compile Include="Http\Configuration\HttpElementCollection.cs" />
+    <Compile Include="Http\Configuration\HttpConfig.cs" />
     <Compile Include="Http\Connection.cs" />
-    <Compile Include="HttpAgent\HttpAgentModule.cs" />
     <Compile Include="Http\HttpModule.cs" />
     <Compile Include="Http\HttpModuleBase.cs" />
     <Compile Include="IBridge.cs" />
@@ -109,31 +67,18 @@
     <Compile Include="Loggers\EventLogger.cs" />
     <Compile Include="Loggers\EventType.cs" />
     <Compile Include="Loggers\LogExtensions.cs" />
-    <Compile Include="PortMap\Configuration\PortMapElement.cs" />
-    <Compile Include="PortMap\Configuration\PortMapElementCollection.cs" />
-    <Compile Include="Configuration\ProxySection.cs" />
+    <Compile Include="Loggers\LogStore.cs" />
+    <Compile Include="PortMap\Configuration\PortMapConfig.cs" />
     <Compile Include="PortMap\PortMapModule.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy.cs" />
-    <Compile Include="HttpBridgeService\HttpBridgeServiceModule.cs" />
-    <Compile Include="HttpBridgeService\RemoteConnection.cs" />
-    <Compile Include="Redirect\Configuration\ReplaceElement.cs" />
-    <Compile Include="Redirect\Configuration\RedirectElement.cs" />
-    <Compile Include="Redirect\Configuration\ReplaceElementCollection.cs" />
-    <Compile Include="Redirect\Configuration\RedirectElementCollection.cs" />
+    <Compile Include="Redirect\Configuration\RedirectConfig.cs" />
+    <Compile Include="Redirect\Configuration\ReplaceConfig.cs" />
     <Compile Include="Redirect\RedirectModule.cs" />
-    <Compile Include="RemoteControl.cs" />
     <Compile Include="SocketExtentions.cs" />
     <Compile Include="TcpBridge.cs" />
+    <Compile Include="XmlHelper.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
