--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Any.Proxy.Api\packages.config" />
-  <repository path="..\Any.Proxy.Logs\packages.config" />
-  <repository path="..\Any.Proxy\packages.config" />
+  <repository path="..\Ap.Proxy.Api\packages.config" />
+  <repository path="..\Ap.Proxy\packages.config" />
 </repositories>
