--- a/Ap.Proxy.Api/Ap.Proxy.Api.csproj
+++ b/Ap.Proxy.Api/Ap.Proxy.Api.csproj
@@ -35,8 +35,13 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ap.Log">
-      <HintPath>..\packages\Ap.Log.1.0.0\lib\Ap.Log.dll</HintPath>
+    <Reference Include="Ap.Express, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ap.Express.1.0.4\lib\Ap.Express.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ap.Log, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ap.Log.1.0.1\lib\Ap.Log.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin">
       <HintPath>..\packages\Microsoft.Owin.2.0.2\lib\net45\Microsoft.Owin.dll</HintPath>
@@ -80,12 +85,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\ProxyController.cs" />
+    <Compile Include="JsonHelper.cs" />
+    <Compile Include="ReflectionHelper.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Configuration\RemoteSection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RemoteControl.cs" />
+    <Compile Include="App.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
@@ -103,7 +111,9 @@
     <Content Include="proxy.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="wwwroot\index.html" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
