--- a/Ap.Proxy.Api/app.config
+++ b/Ap.Proxy.Api/app.config
@@ -3,7 +3,7 @@
   <configSections>
     <section name="remote" type="Ap.Proxy.Api.Configuration.RemoteSection, Ap.Proxy.Api, Version=1.0.0.0, Culture=neutral"/>
   </configSections>
-  <!--<remote password="1" prefixes="http://hashabc.com:50000/"/>-->
+  <!--<remote password="1" prefixes="http://getbo.net/"/>-->
   <remote password="1" prefixes="http://localhost:50000/"/>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
